--- a/3/technologie.tex
+++ b/3/technologie.tex
@@ -5,7 +5,7 @@
 \else
     \graphicspath{{3/figures/EPS/}{3/figures/}}
 \fi
-\chapter{Technologie} % top level followed by section, subsection
+\chapter{Wykorzystane technologie} % top level followed by section, subsection
 
 
 % ----------------------- contents from here ------------------------
